- fix settings alignment issue

--- a/Assets/Admin/Css/style.scss
+++ b/Assets/Admin/Css/style.scss
@@ -484,7 +484,6 @@ $border-color: #E7E7EF;
     display: flex;
     align-items: center;
     margin-bottom: 15px;
-    justify-content: center;
     flex-wrap: wrap;
     gap: 16px;
 
